--- a/api_gateway_service/config/config.yaml
+++ b/api_gateway_service/config/config.yaml
@@ -44,8 +44,7 @@ redis:
   password: ""
   db: 0
   poolSize: 300
-jaeger:
+otl:
   enable: true
   serviceName: api_gateway_service
-  hostPort: "localhost:6831"
-  logSpans: false
+  endpoint: "localhost:4317"
