--- a/graphql_service/config/config.yaml
+++ b/graphql_service/config/config.yaml
@@ -40,8 +40,7 @@ redis:
   password: ""
   db: 0
   poolSize: 300
-jaeger:
+otl:
   enable: true
-  serviceName: api_gateway_service
-  hostPort: "localhost:6831"
-  logSpans: false
+  serviceName: graphql_service
+  endpoint: "localhost:4317"
