--- a/api_gateway_service/config/config.yaml
+++ b/api_gateway_service/config/config.yaml
@@ -4,8 +4,8 @@ grpc:
 http:
   port: :5001
   development: true
-  basePath: /api/v1
-  productsPath: /api/v1/products
+  basePath: /v1
+  v1Path: /v1
   debugHeaders: false
   httpClientDebug: false
   debugErrorsResponse: true
@@ -44,6 +44,8 @@ redis:
   password: ""
   db: 0
   poolSize: 300
+resources:
+  redocly_json: http://localhost:5001/v1/swagger/doc.json
 otl:
   enable: true
   serviceName: api_gateway_service
